@@ -10,8 +10,10 @@
   extern char OSD_fontfile[1024];
   extern char OSD_text[128];
   extern char OSD_frame[48];
+  extern char OSD_smpte[13];
   extern int OSD_mode;
   extern int OSD_fx, OSD_fy;
+  extern int OSD_sx, OSD_sy;
   extern int OSD_tx, OSD_ty;
 
 
